@@ -1,3 +1,7 @@
+September 2019
+  - Group account types can show member+owner count in list view
+
+
 02.07.2019 6.8
   - Parallel editing of multiple entries in different browser tabs supported
   - LAM supports the progressive web app standard which allows to install LAM as an icon on home screen
